# modular-arithmetic

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  modular-arithmetic.cabal  shell.nix
.github/workflows/: core.yml
nix/: sources.json
src/Data/: Modular.hs
test-suite/: DocTest.hs
