name:                modular-arithmetic
version:             1.2.1.2
synopsis:            A type for integers modulo some constant.

description:         A convenient type for working with integers modulo some constant. It saves you from manually wrapping numeric operations all over the place and prevents a range of simple mistakes. @Integer `Mod` 7@ is the type of integers (mod 7) backed by @Integer@.

                     We also have some cute syntax for these types like @ℤ/7@ for integers modulo 7.

homepage:            https://github.com/TikhonJelvis/modular-arithmetic
bug-reports:         https://github.com/TikhonJelvis/modular-arithmetic/issues
license:             BSD3
license-file:        LICENSE
author:              Tikhon Jelvis <tikhon@jelv.is>
maintainer:          Tikhon Jelvis <tikhon@jelv.is>
category:            Math
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.8

source-repository head
  type:           git
  location:       git://github.com/TikhonJelvis/modular-arithmetic.git

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Modular
  build-depends:       base >= 4.7 && < 5

test-suite examples
  hs-source-dirs:      test-suite
  main-is:             DocTest.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5
                     , Glob >= 0.7 && < 0.8
                     , doctest >= 0.9 && < 0.12
