cabal-version:       2.2
name:                modular-arithmetic
version:             2.0.0.3
synopsis:            A type for integers modulo some constant.

description:         A convenient type for working with integers modulo some constant. It saves you from manually wrapping numeric operations all over the place and prevents a range of simple mistakes. @Integer `Mod` 7@ is the type of integers (mod 7) backed by @Integer@.

                     We also have some cute syntax for these types like @ℤ/7@ for integers modulo 7.

homepage:            https://github.com/TikhonJelvis/modular-arithmetic
bug-reports:         https://github.com/TikhonJelvis/modular-arithmetic/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tikhon Jelvis <tikhon@jelv.is>
maintainer:          Tikhon Jelvis <tikhon@jelv.is>
category:            Math
build-type:          Simple
extra-doc-files:  README.md
                   , CHANGELOG.md

source-repository head
  type:           git
  location:       git://github.com/TikhonJelvis/modular-arithmetic.git

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:     Data.Modular
  build-depends:       base >4.9 && <5
  if impl(ghc < 9.2.1)
    build-depends:     typelits-witnesses <0.5

test-suite examples
  hs-source-dirs:      test-suite, src
  main-is:             DocTest.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  build-depends:       base >4.9 && <5
                     , doctest >= 0.9 && <0.22
  if impl(ghc < 9.2.1)
    build-depends:     typelits-witnesses <0.5
